--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ node_modules
 environment.dev.ts
 environment.ts
 apps/**/local-stage/*.json
+apps/**/src/assets/deployment/app-config.json
 
 # IDE - VSCode
 .vscode
