--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ node_modules
 environment.dev.ts
 environment.ts
 apps/**/local-stage/*.json
-apps/**/src/assets/deployment/app-config.json
+apps/**/src/assets/deployment/app-config.dev.json
 
 # IDE - VSCode
 .vscode
