--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "postcss-preset-env": "7.5.0",
     "postcss-url": "10.1.3",
     "prettier": "2.7.1",
+    "replace-in-file": "^6.3.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.66.0",
     "rollup-plugin-copy": "^3.4.0",
