--- a/libs/sistema/.eslintrc.json
+++ b/libs/sistema/.eslintrc.json
@@ -10,7 +10,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "nus",
+            "prefix": "nsi",
             "style": "camelCase"
           }
         ],
@@ -18,7 +18,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "nus",
+            "prefix": "nsi",
             "style": "kebab-case"
           }
         ]
