Replace simple-select by dropdown-button in resource list
- Create new dropdown-button standalone component in sistema
- use dropdown-button in label-field, kb-process and resource list
- Remove STF-simple-select component and module

--- a/nx.json
+++ b/nx.json
@@ -37,7 +37,8 @@
       "unitTestRunner": "jest"
     },
     "@nrwl/angular:component": {
-      "style": "scss"
+      "style": "scss",
+      "changeDetection": "OnPush"
     }
   },
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
