--- a/angular.json
+++ b/angular.json
@@ -10,9 +10,9 @@
           "builder": "@nrwl/workspace:run-commands",
           "options": {
             "commands": [
+              "mkdir -p dist/libs/chrome-ext/",
               "rimraf dist/libs/chrome-ext/",
               "cp -a libs/chrome-ext/src/lib/ dist/libs/chrome-ext/",
-              "nx build sdk-core",
               "cp dist/sdk-core/umd/index.js dist/libs/chrome-ext/vendor/nuclia-sdk.umd.min.js",
               "cp node_modules/rxjs/dist/bundles/rxjs.umd.min.js dist/libs/chrome-ext/vendor/rxjs.umd.min.js"
             ],
