Update nx from 14.3.6 to 14.5.6

--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.0.3",
-    "@angular/cdk": "14.0.3",
-    "@angular/common": "14.0.3",
-    "@angular/compiler": "14.0.3",
-    "@angular/core": "14.0.3",
+    "@angular/animations": "14.1.2",
+    "@angular/cdk": "14.1.2",
+    "@angular/common": "14.1.2",
+    "@angular/compiler": "14.1.2",
+    "@angular/core": "14.1.2",
     "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "14.0.3",
-    "@angular/material": "14.0.3",
-    "@angular/platform-browser": "14.0.3",
-    "@angular/platform-browser-dynamic": "14.0.3",
-    "@angular/router": "14.0.3",
-    "@angular/service-worker": "14.0.3",
+    "@angular/forms": "14.1.2",
+    "@angular/material": "14.1.2",
+    "@angular/platform-browser": "14.1.2",
+    "@angular/platform-browser-dynamic": "14.1.2",
+    "@angular/router": "14.1.2",
+    "@angular/service-worker": "14.1.2",
     "@ng-web-apis/common": "^2.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
@@ -97,27 +97,27 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.3",
-    "@angular-eslint/eslint-plugin": "^14.0.0",
-    "@angular-eslint/eslint-plugin-template": "^14.0.0",
+    "@angular-devkit/build-angular": "14.1.3",
+    "@angular-eslint/eslint-plugin": "14.0.2",
+    "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/schematics": "^14.0.0",
-    "@angular-eslint/template-parser": "^14.0.0",
+    "@angular-eslint/template-parser": "14.0.2",
     "@angular/cli": "~14.0.0",
-    "@angular/compiler-cli": "14.0.3",
-    "@angular/language-service": "14.0.3",
+    "@angular/compiler-cli": "14.1.2",
+    "@angular/language-service": "14.1.2",
     "@biesbjerg/ngx-translate-extract": "^7.0.2",
-    "@nrwl/angular": "14.3.6",
-    "@nrwl/cli": "14.3.6",
-    "@nrwl/eslint-plugin-nx": "14.3.6",
-    "@nrwl/jest": "14.3.6",
-    "@nrwl/js": "14.3.6",
-    "@nrwl/linter": "14.3.6",
-    "@nrwl/node": "14.3.6",
-    "@nrwl/workspace": "14.3.6",
+    "@nrwl/angular": "14.5.6",
+    "@nrwl/cli": "14.5.6",
+    "@nrwl/eslint-plugin-nx": "14.5.6",
+    "@nrwl/jest": "14.5.6",
+    "@nrwl/js": "14.5.6",
+    "@nrwl/linter": "14.5.6",
+    "@nrwl/node": "14.5.6",
+    "@nrwl/workspace": "14.5.6",
     "@nxext/svelte": "^13.1.3",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@schematics/angular": "14.0.3",
+    "@schematics/angular": "14.1.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
@@ -131,7 +131,7 @@
     "@types/jexl": "^2.2.0",
     "@types/latinize": "^0.2.15",
     "@types/lru-cache": "^5.1.0",
-    "@types/node": "^15.6.1",
+    "@types/node": "18.7.1",
     "@types/perfect-scrollbar": "^1.3.0",
     "@types/spark-md5": "^3.0.2",
     "@types/uuid": "^8.3.0",
@@ -150,15 +150,15 @@
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "exitzero": "^1.0.1",
-    "jasmine-core": "4.1.1",
+    "jasmine-core": "4.2.0",
     "jasmine-spec-reporter": "7.0.0",
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.2",
     "jsrsasign": "^10.1.0",
     "ng-mocks": "^14.1.1",
-    "ng-packagr": "14.0.2",
+    "ng-packagr": "14.1.0",
     "ngx-build-plus": "11.0.0",
-    "nx": "14.3.6",
+    "nx": "14.5.6",
     "nx-electron": "^13.0.0",
     "postcss": "^8.3.9",
     "postcss-import": "14.1.0",
@@ -179,9 +179,10 @@
     "svelte-jester": "^1.3.2",
     "svelte-preprocess": "^4.9.8",
     "ts-jest": "27.1.4",
-    "ts-node": "10.8.1",
+    "ts-node": "10.9.1",
     "tslint": "6.1.3",
     "typescript": "4.7.4",
     "vite": "2.7.13"
   }
 }
+
