--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,6 @@ jobs:
           yarn --prefer-offline
           yarn missdev
       - name: Unit tests
-        run: npx nx affected --target=test --parallel=3 --exclude=sdk-demo,search-widget-demo,sistema-demo
+        run: npx nx affected --target=test --parallel=3 --exclude=sdk-demo,search-widget-demo,sistema-demo,sistema
       - name: Check if build succeeds
         run: npx nx affected --target=build --parallel=3 --configuration production --exclude=sdk-demo,search-widget-demo,sdk-core
