use es-dirname to resolve current dirname

--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "electron": "^17.0.0",
     "electron-builder": "^23.0.2",
     "electron-notarize": "^1.2.1",
+    "es-dirname": "^0.1.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
