--- a/libs/sdk-core/protobuf/package.json
+++ b/libs/sdk-core/protobuf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuclia/protobuf",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "JavaScript utility to handle Nuclia protobuffer messages",
   "main": "./index.mjs",
   "repository": "https://github.com/nuclia/frontend",
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "es-dirname": "^0.1.0",
     "protobufjs": "^6.11.3"
   }
 }
