--- a/angular.json
+++ b/angular.json
@@ -862,18 +862,7 @@
           "builder": "@nrwl/workspace:run-commands",
           "options": {
             "commands": [
-              "yarn vite build -c=libs/search-widget/vite.config.js && cp -r libs/search-widget/public/i18n dist/libs/search-widget"
-            ]
-          },
-          "configurations": {
-            "production": {}
-          }
-        },
-        "build-video": {
-          "builder": "@nrwl/workspace:run-commands",
-          "options": {
-            "commands": [
-              "yarn vite build -c=libs/search-widget/vite_video.config.js && cp -r libs/search-widget/public/i18n dist/libs/search-video-widget"
+              "yarn run build:search-widgets"
             ]
           },
           "configurations": {
