--- a/angular.json
+++ b/angular.json
@@ -862,33 +862,11 @@
           "builder": "@nrwl/workspace:run-commands",
           "options": {
             "commands": [
-              "yarn vite build -c=libs/search-widget/vite.config.js && cp -r libs/search-widget/public/i18n dist/libs/search-widget"
+              "yarn run build:search-widgets"
             ]
           },
           "configurations": {
             "production": {}
-          }
-        },
-        "build-original": {
-          "builder": "@nxext/svelte:build",
-          "outputs": ["{options.outputPath}"],
-          "options": {
-            "outputPath": "dist/libs/search-widget",
-            "entryFile": "libs/search-widget/src/index.ts",
-            "tsConfig": "libs/search-widget/tsconfig.lib.json",
-            "svelteConfig": "libs/search-widget/svelte.config.cjs",
-            "assets": [
-              {
-                "glob": "/*",
-                "input": "./public/**",
-                "output": "./"
-              }
-            ]
-          },
-          "configurations": {
-            "production": {
-              "dev": false
-            }
           }
         },
         "test": {
