allow to import youtube channels/playlists

--- a/libs/chrome-ext/src/lib/manifest.json
+++ b/libs/chrome-ext/src/lib/manifest.json
@@ -9,7 +9,7 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["storage", "contextMenus"],
+  "permissions": ["storage", "contextMenus", "tabs"],
   "background": {
     "service_worker": "background.js"
   },
