--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "posthog-js": "^1.17.9",
     "protobufjs": "^6.11.3",
     "run-script-os": "^1.1.6",
-    "rxjs": "7.5.6",
+    "rxjs": "~7.5.0",
     "spark-md5": "^3.0.1",
     "tslib": "^2.0.1",
     "tus-js-client": "^2.3.1",
@@ -80,7 +80,7 @@
     "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/schematics": "^14.0.0",
     "@angular-eslint/template-parser": "14.0.2",
-    "@angular/cli": "~14.0.0",
+    "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "14.2.0",
     "@angular/language-service": "14.2.0",
     "@biesbjerg/ngx-translate-extract": "^7.0.2",
@@ -132,6 +132,7 @@
     "jasmine-core": "4.2.0",
     "jasmine-spec-reporter": "7.0.0",
     "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.2",
     "jsrsasign": "^10.1.0",
     "ng-mocks": "^14.1.1",
@@ -164,4 +165,3 @@
     "vite": "2.7.13"
   }
 }
-
