[sc-2127] update nx and migrate to jest 28 (#230)
* upgrade @angular/flex-layout to v14
update nx to last patch version

* nx migrate latest

* yarn nx migrate --run-migrations

* yarn upgrade angular-svg-icon

* yarn upgrade ngx-captcha

* yarn upgrade svelte-jester and svelte-check

* yarn upgrade @nxext/svelte and @nxext/vite

* yarn upgrade postcss, postcss-import and postcss-preset-env

* npx browserslist --update-db

--- a/package.json
+++ b/package.json
@@ -27,27 +27,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.1.2",
-    "@angular/cdk": "14.1.2",
-    "@angular/common": "14.1.2",
-    "@angular/compiler": "14.1.2",
-    "@angular/core": "14.1.2",
-    "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "14.1.2",
-    "@angular/material": "14.1.2",
-    "@angular/platform-browser": "14.1.2",
-    "@angular/platform-browser-dynamic": "14.1.2",
-    "@angular/router": "14.1.2",
-    "@angular/service-worker": "14.1.2",
+    "@angular/animations": "14.2.0",
+    "@angular/cdk": "14.2.0",
+    "@angular/common": "14.2.0",
+    "@angular/compiler": "14.2.0",
+    "@angular/core": "14.2.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
+    "@angular/forms": "14.2.0",
+    "@angular/material": "14.2.0",
+    "@angular/platform-browser": "14.2.0",
+    "@angular/platform-browser-dynamic": "14.2.0",
+    "@angular/router": "14.2.0",
+    "@angular/service-worker": "14.2.0",
     "@ng-web-apis/common": "^2.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "@nxext/vite": "^13.2.1",
+    "@nxext/vite": "^14.0.3",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@sentry/angular": "^7.2.0",
     "@sentry/tracing": "^7.2.0",
     "algoliasearch": "^4.13.1",
-    "angular-svg-icon": "^13.0.0",
+    "angular-svg-icon": "^14.0.0",
     "child_process": "^1.0.2",
     "core-js": "^3.6.4",
     "crypto": "^1.0.1",
@@ -57,7 +57,7 @@
     "fuse.js": "^3.6.1",
     "latinize": "^0.5.0",
     "mrs-developer": "^1.7.1",
-    "ngx-captcha": "^9.0.1",
+    "ngx-captcha": "^12.0.2",
     "ngx-ui-tour-core": "^7.0.2",
     "ngx-ui-tour-md-menu": "^7.0.2",
     "node-machine-id": "^1.1.12",
@@ -65,7 +65,7 @@
     "posthog-js": "^1.17.9",
     "protobufjs": "^6.11.3",
     "run-script-os": "^1.1.6",
-    "rxjs": "7.5.2",
+    "rxjs": "~7.5.0",
     "spark-md5": "^3.0.1",
     "tslib": "^2.0.1",
     "tus-js-client": "^2.3.1",
@@ -75,27 +75,27 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.1.3",
+    "@angular-devkit/build-angular": "14.2.1",
     "@angular-eslint/eslint-plugin": "14.0.2",
     "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/schematics": "^14.0.0",
     "@angular-eslint/template-parser": "14.0.2",
-    "@angular/cli": "~14.0.0",
-    "@angular/compiler-cli": "14.1.2",
-    "@angular/language-service": "14.1.2",
+    "@angular/cli": "~14.2.0",
+    "@angular/compiler-cli": "14.2.0",
+    "@angular/language-service": "14.2.0",
     "@biesbjerg/ngx-translate-extract": "^7.0.2",
-    "@nrwl/angular": "14.5.6",
-    "@nrwl/cli": "14.5.6",
-    "@nrwl/eslint-plugin-nx": "14.5.6",
-    "@nrwl/jest": "14.5.6",
-    "@nrwl/js": "14.5.6",
-    "@nrwl/linter": "14.5.6",
-    "@nrwl/node": "14.5.6",
-    "@nrwl/workspace": "14.5.6",
-    "@nxext/svelte": "^13.1.3",
+    "@nrwl/angular": "14.6.4",
+    "@nrwl/cli": "14.6.4",
+    "@nrwl/eslint-plugin-nx": "14.6.4",
+    "@nrwl/jest": "14.6.4",
+    "@nrwl/js": "14.6.4",
+    "@nrwl/linter": "14.6.4",
+    "@nrwl/node": "14.6.4",
+    "@nrwl/workspace": "14.6.4",
+    "@nxext/svelte": "^14.0.2",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@schematics/angular": "14.1.3",
+    "@schematics/angular": "14.2.1",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
@@ -105,7 +105,7 @@
     "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
     "@types/jasmine": "4.0.3",
-    "@types/jest": "27.4.1",
+    "@types/jest": "28.1.8",
     "@types/jexl": "^2.2.0",
     "@types/latinize": "^0.2.15",
     "@types/lru-cache": "^5.1.0",
@@ -115,8 +115,8 @@
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
     "ajv-formats": "^2.1.1",
     "codelyzer": "6.0.2",
     "crypto-browserify": "^3.12.0",
@@ -131,17 +131,18 @@
     "exitzero": "^1.0.1",
     "jasmine-core": "4.2.0",
     "jasmine-spec-reporter": "7.0.0",
-    "jest": "27.5.1",
-    "jest-preset-angular": "11.1.2",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "12.2.2",
     "jsrsasign": "^10.1.0",
     "ng-mocks": "^14.1.1",
-    "ng-packagr": "14.1.0",
+    "ng-packagr": "14.2.0",
     "ngx-build-plus": "11.0.0",
-    "nx": "14.5.6",
+    "nx": "14.6.4",
     "nx-electron": "^13.0.0",
-    "postcss": "^8.3.9",
-    "postcss-import": "14.1.0",
-    "postcss-preset-env": "7.5.0",
+    "postcss": "^8.4.16",
+    "postcss-import": "15.0.0",
+    "postcss-preset-env": "7.8.0",
     "postcss-url": "10.1.3",
     "prettier": "2.7.1",
     "replace-in-file": "^6.3.5",
@@ -154,10 +155,10 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.44.2",
-    "svelte-check": "^1.4.0",
-    "svelte-jester": "^1.3.2",
+    "svelte-check": "^2.9.0",
+    "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.9.8",
-    "ts-jest": "27.1.4",
+    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
     "typescript": "4.7.4",
