[sc-2184] Allow to authenticate to Nuclia from Chrome extension - Replace api key field with a login button - Replace knowledge box Id field with an account and knowledge box selectors

--- a/libs/chrome-ext/src/lib/manifest.json
+++ b/libs/chrome-ext/src/lib/manifest.json
@@ -15,6 +15,12 @@
   },
   "options_ui": {
     "page": "options/options.html",
-    "open_in_tab": false
-  }
+    "open_in_tab": true
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [ "options/options.html" ],
+      "matches": ["http://localhost:4200/*", "https://stashify.cloud/*", "https://nuclia.cloud/*"]
+    }
+  ]
 }
